--- a/src/Catty/Resources/Localization/es.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/es.lproj/Localizable.strings
@@ -8,10 +8,16 @@
 "Abc" = "Abc";
 
 /* No comment provided by engineer. */
+"About" = "Acerca de";
+
+/* No comment provided by engineer. */
 "About Catrobat" = "Acerca de Catrobat";
 
 /* No comment provided by engineer. */
 "About Pocket Code" = "Acerca de Pocket Code";
+
+/* No comment provided by engineer. */
+"About Us" = "About Us";
 
 /* No comment provided by engineer. */
 "absolute value" = "ABS";
@@ -143,6 +149,9 @@
 "Arduino extension" = "Bloques Arduino";
 
 /* No comment provided by engineer. */
+"Are you sure you want to delete your account? This cannot be undone!" = "Are you sure you want to delete your account? This cannot be undone!";
+
+/* No comment provided by engineer. */
 "Ask " = "Preguntar ";
 
 /* No comment provided by engineer. */
@@ -261,6 +270,9 @@
 
 /* No comment provided by engineer. */
 "Catrobat community" = "Comunidad Catrobat";
+
+/* No comment provided by engineer. */
+"Catrobat website" = "Catrobat website";
 
 /* No comment provided by engineer. */
 "ceiling" = "techo";
@@ -426,6 +438,9 @@
 
 /* No comment provided by engineer. */
 "Delete" = "Borrar";
+
+/* No comment provided by engineer. */
+"Delete account" = "Eliminar Cuenta";
 
 /* No comment provided by engineer. */
 "Delete actors or objects" = "Eliminar actores u objetos";
@@ -664,9 +679,6 @@
 /* No comment provided by engineer. */
 "End of Loop" = "Fin del bucle";
 
-/* No comment provided by engineer. */
-"Enter a reason" = "Entre una razón";
-
 /* Placeholder for add image-name input field */
 "Enter your image name here..." = "Introduzca el nombre de su imagen aquí...";
 
@@ -698,9 +710,6 @@
 "Error" = "Error";
 
 /* No comment provided by engineer. */
-"Error occurred while reporting the project. Please try again later." = "Ocurrió un error mientras se reportaba el proyecto. Inténtalo de nuevo más tarde.";
-
-/* No comment provided by engineer. */
 "Error saving file" = "Error al guardar el archivo";
 
 /* No comment provided by engineer. */
@@ -708,6 +717,9 @@
 
 /* No comment provided by engineer. */
 "exponent" = "exp";
+
+/* No comment provided by engineer. */
+"Extensions" = "Extensions";
 
 /* No comment provided by engineer. */
 "FA" = "FA";
@@ -845,6 +857,9 @@
 "head top y" = "cabeza arriba y";
 
 /* No comment provided by engineer. */
+"height of object with ID" = "height of object with ID";
+
+/* No comment provided by engineer. */
 "Hello!" = "¡Hola!";
 
 /* No comment provided by engineer. */
@@ -864,6 +879,9 @@
 
 /* No comment provided by engineer. */
 "hour" = "hora";
+
+/* No comment provided by engineer. */
+"ID of detected object" = "ID del objeto detectado";
 
 /* No comment provided by engineer. */
 "If" = "Si";
@@ -959,6 +977,9 @@
 "LA" = "LA";
 
 /* No comment provided by engineer. */
+"label of object with ID" = "label of object with ID";
+
+/* No comment provided by engineer. */
 "Last access" = "Último acceso";
 
 /* No comment provided by engineer. */
@@ -980,10 +1001,22 @@
 "Left" = "Izquierda";
 
 /* No comment provided by engineer. */
+"left ankle x" = "tobillo izquierdo x";
+
+/* No comment provided by engineer. */
+"left ankle y" = "tobillo izquierdo y";
+
+/* No comment provided by engineer. */
 "left ear x" = "oreja izquierda x";
 
 /* No comment provided by engineer. */
 "left ear y" = "oreja izquierda y";
+
+/* No comment provided by engineer. */
+"left elbow x" = "codo izquierdo x";
+
+/* No comment provided by engineer. */
+"left elbow y" = "codo izquierdo y";
 
 /* No comment provided by engineer. */
 "left eye center x" = "ojo izquierdo centro x";
@@ -1004,22 +1037,76 @@
 "left eye outer y" = "ojo izquierdo exterior y";
 
 /* No comment provided by engineer. */
-"left eyebrow center x" = "left eyebrow center x";
+"left eyebrow center x" = "Centro X de la ceja izquierda ";
 
 /* No comment provided by engineer. */
-"left eyebrow center y" = "left eyebrow center y";
+"left eyebrow center y" = "Centro y de la ceja izquierda";
 
 /* No comment provided by engineer. */
-"left eyebrow inner x" = "left eyebrow inner x";
+"left eyebrow inner x" = "Interior X de la ceja izquierda ";
 
 /* No comment provided by engineer. */
-"left eyebrow inner y" = "left eyebrow inner y";
+"left eyebrow inner y" = "Interior Y de la ceja izquierda";
 
 /* No comment provided by engineer. */
-"left eyebrow outer x" = "left eyebrow outer x";
+"left eyebrow outer x" = "Exterior X de la ceja izquierda";
 
 /* No comment provided by engineer. */
 "left eyebrow outer y" = "left eyebrow outer y";
+
+/* No comment provided by engineer. */
+"left hip x" = "cadera izquierda x";
+
+/* No comment provided by engineer. */
+"left hip y" = "cadera izquierda y";
+
+/* No comment provided by engineer. */
+"left index knuckle x" = "nudillo índice izquierdo x";
+
+/* No comment provided by engineer. */
+"left index knuckle y" = "nudillo índice izquierdo y";
+
+/* No comment provided by engineer. */
+"left knee x" = "rodilla izquierda x";
+
+/* No comment provided by engineer. */
+"left knee y" = "rodilla izquierda y";
+
+/* No comment provided by engineer. */
+"left middle finger knuckle x" = "left middle finger knuckle x";
+
+/* No comment provided by engineer. */
+"left middle finger knuckle y" = "left middle finger knuckle y";
+
+/* No comment provided by engineer. */
+"left pinky knuckle x" = "nudillo del meñique izquierdo x";
+
+/* No comment provided by engineer. */
+"left pinky knuckle y" = "nudillo del meñique izquierdo y";
+
+/* No comment provided by engineer. */
+"left ring finger knuckle x" = "left ring finger knuckle x";
+
+/* No comment provided by engineer. */
+"left ring finger knuckle y" = "left ring finger knuckle y";
+
+/* No comment provided by engineer. */
+"left shoulder x" = "hombro izquierdo x";
+
+/* No comment provided by engineer. */
+"left shoulder y" = "hombro izquierdo y";
+
+/* No comment provided by engineer. */
+"left thumb knuckle x" = "nudillo del pulgar izquierdo x";
+
+/* No comment provided by engineer. */
+"left thumb knuckle y" = "nudillo del pulgar izquierdo y";
+
+/* No comment provided by engineer. */
+"left wrist x" = "muñeca izquierda x";
+
+/* No comment provided by engineer. */
+"left wrist y" = "muñeca izquierda y";
 
 /* No comment provided by engineer. */
 "left-right only" = "de izquierda a derecha solamente";
@@ -1241,6 +1328,12 @@
 "natural logarithm" = "ln";
 
 /* No comment provided by engineer. */
+"neck x" = "cuello x";
+
+/* No comment provided by engineer. */
+"neck y" = "cuello y";
+
+/* No comment provided by engineer. */
 "New" = "Nuevo";
 
 /* paint */
@@ -1295,9 +1388,6 @@
 "No search results" = "Sin resultado de búsqueda";
 
 /* No comment provided by engineer. */
-"No whitespace character allowed" = "No se permite el uso de espacios en blanco";
-
-/* No comment provided by engineer. */
 "nose x" = "nariz x";
 
 /* No comment provided by engineer. */
@@ -1328,6 +1418,9 @@
 "number of items" = "número_de_elementos";
 
 /* No comment provided by engineer. */
+"number of text blocks" = "número de bloques de texto";
+
+/* No comment provided by engineer. */
 "Numbers" = "Números";
 
 /* No comment provided by engineer. */
@@ -1335,6 +1428,12 @@
 
 /* No comment provided by engineer. */
 "Object or actor name" = "Nombre del objeto o actor";
+
+/* No comment provided by engineer. */
+"Object recognition" = "Reconocimiento de objetos";
+
+/* No comment provided by engineer. */
+"object with ID visible" = "object with ID visible";
 
 /* No comment provided by engineer. */
 "Oct" = "Oct";
@@ -1444,9 +1543,6 @@
 /* No comment provided by engineer. */
 "Please enter at least %lu character(s)." = "Por favor, introduzca al menos %lu caracter(es).";
 
-/* No comment provided by engineer. */
-"Please log in to report this project as inappropriate" = "Inicia sesión para reportar este proyecto como inapropiado";
-
 /* paint */
 "Please pick a tool" = "Por favor, elige una herramienta";
 
@@ -1514,6 +1610,9 @@
 "Previous look" = "Apariencia Anterior";
 
 /* No comment provided by engineer. */
+"Privacy" = "Privacy";
+
+/* No comment provided by engineer. */
 "Privacy Settings" = "Ajustes de privacidad";
 
 /* No comment provided by engineer. */
@@ -1562,9 +1661,6 @@
 "red" = "rojo";
 
 /* No comment provided by engineer. */
-"Register" = "Regístrate";
-
-/* No comment provided by engineer. */
 "Registration successful" = "Registro realizado con éxito";
 
 /* No comment provided by engineer. */
@@ -1597,9 +1693,6 @@
 /* No comment provided by engineer. */
 "Replace item in list" = "Reemplace el elemento de lista";
 
-/* No comment provided by engineer. */
-"Report as inappropriate" = "Reporte como inapropiado";
-
 /* paint */
 "Resize" = "Redimensionar";
 
@@ -1613,10 +1706,22 @@
 "Right" = "Derecha";
 
 /* No comment provided by engineer. */
+"right ankle x" = "tobillo derecho x";
+
+/* No comment provided by engineer. */
+"right ankle y" = "tobillo derecho y";
+
+/* No comment provided by engineer. */
 "right ear x" = "oreja derecha x";
 
 /* No comment provided by engineer. */
 "right ear y" = "oreja derecha y";
+
+/* No comment provided by engineer. */
+"right elbow x" = "codo derecho x";
+
+/* No comment provided by engineer. */
+"right elbow y" = "codo derecho y";
 
 /* No comment provided by engineer. */
 "right eye center x" = "centro del ojo derecho x";
@@ -1653,6 +1758,60 @@
 
 /* No comment provided by engineer. */
 "right eyebrow outer y" = "right eyebrow outer y";
+
+/* No comment provided by engineer. */
+"right hip x" = "cadera derecha x";
+
+/* No comment provided by engineer. */
+"right hip y" = "cadera derecha y";
+
+/* No comment provided by engineer. */
+"right index knuckle x" = "nudillo del índice derecho x";
+
+/* No comment provided by engineer. */
+"right index knuckle y" = "nudillo índice derecho y";
+
+/* No comment provided by engineer. */
+"right knee x" = "rodilla derecha x";
+
+/* No comment provided by engineer. */
+"right knee y" = "rodilla derecha y";
+
+/* No comment provided by engineer. */
+"right middle finger knuckle x" = "right middle finger knuckle x";
+
+/* No comment provided by engineer. */
+"right middle finger knuckle y" = "right middle finger knuckle y";
+
+/* No comment provided by engineer. */
+"right pinky knuckle x" = "nudillo del meñique derecho x";
+
+/* No comment provided by engineer. */
+"right pinky knuckle y" = "nudillo del meñique derecho y";
+
+/* No comment provided by engineer. */
+"right ring finger knuckle x" = "right ring finger knuckle x";
+
+/* No comment provided by engineer. */
+"right ring finger knuckle y" = "right ring finger knuckle y";
+
+/* No comment provided by engineer. */
+"right shoulder x" = "hombro derecho x";
+
+/* No comment provided by engineer. */
+"right shoulder y" = "hombro derecho y";
+
+/* No comment provided by engineer. */
+"right thumb knuckle x" = "nudillo del pulgar derecho x";
+
+/* No comment provided by engineer. */
+"right thumb knuckle y" = "nudillo del pulgar derecho y";
+
+/* No comment provided by engineer. */
+"right wrist x" = "muñeca derecha x";
+
+/* No comment provided by engineer. */
+"right wrist y" = "muñeca derecha y";
 
 /* paint */
 "Rotate" = "Rotar";
@@ -1811,6 +1970,9 @@
 "Set tempo to" = "Establecer tempo a";
 
 /* No comment provided by engineer. */
+"Set thread color to" = "Establecer el color del hilo en";
+
+/* No comment provided by engineer. */
 "Set transparency " = "Establezca la transparencia ";
 
 /* No comment provided by engineer. */
@@ -1904,6 +2066,9 @@
 "Start sound and wait" = "Reproducir sonido y esperar";
 
 /* No comment provided by engineer. */
+"Start triple stitch with length" = "Comenzar triple unión con la longitud";
+
+/* No comment provided by engineer. */
 "Start zigzag stitch with length" = "Iniciar unión zigzag con la longitud";
 
 /* No comment provided by engineer. */
@@ -1976,7 +2141,28 @@
 "Text" = "Texto";
 
 /* No comment provided by engineer. */
+"text block from camera" = "bloque de texto de la cámara";
+
+/* No comment provided by engineer. */
+"text block language from camera" = "texto bloque idioma de la cámara";
+
+/* No comment provided by engineer. */
+"text block size from camera" = "tamaño del bloque de texto de la cámara";
+
+/* No comment provided by engineer. */
+"text block x from camera" = "bloque de texto x de la cámara";
+
+/* No comment provided by engineer. */
+"text block y from camera" = "bloque de texto y de la cámara";
+
+/* No comment provided by engineer. */
+"text from camera" = "texto de la cámara";
+
+/* No comment provided by engineer. */
 "Text message:" = "Mensaje de texto:";
+
+/* No comment provided by engineer. */
+"Text recognition" = "Reconocimiento de textos";
 
 /* paint */
 "Text:" = "Texto:";
@@ -2079,6 +2265,9 @@
 
 /* No comment provided by engineer. */
 "true" = "verdadero";
+
+/* No comment provided by engineer. */
+"Trusted domains" = "Trusted domains";
 
 /* No comment provided by engineer. */
 "Tu" = "Ma";
@@ -2204,6 +2393,9 @@
 "View" = "Ver";
 
 /* No comment provided by engineer. */
+"View Terms of Use and Service" = "View Terms of Use and Service";
+
+/* No comment provided by engineer. */
 "Views" = "Vistas";
 
 /* No comment provided by engineer. */
@@ -2248,6 +2440,9 @@
 /* No comment provided by engineer. */
 "When you receive" = "Cuando reciba";
 
+/* No comment provided by engineer. */
+"width of object with ID" = "width of object with ID";
+
 /* paint */
 "Width selection" = "Selección de ancho";
 
@@ -2258,7 +2453,13 @@
 "Wooden Flute" = "Fluta de Madera";
 
 /* No comment provided by engineer. */
+"X of object with ID" = "X of object with ID";
+
+/* No comment provided by engineer. */
 "x: " = "x:";
+
+/* No comment provided by engineer. */
+"Y of object with ID" = "Y of object with ID";
 
 /* No comment provided by engineer. */
 "y: " = "y:";
@@ -2276,6 +2477,9 @@
 "You have already downloaded this project!" = "¡Ya has descargado este proyecto!";
 
 /* No comment provided by engineer. */
+"Your account has been successfully deleted." = "Your account has been successfully deleted.";
+
+/* No comment provided by engineer. */
 "Your answer" = "Su respuesta";
 
 /* No comment provided by engineer. */
@@ -2283,9 +2487,6 @@
 
 /* No comment provided by engineer. */
 "Your project was uploaded to the Catrobat community where others can use and download it." = "Tu proyecto fue subido a la comunidad Catrobat donde otros pueden usarlo y descargarlo.";
-
-/* No comment provided by engineer. */
-"Your report was successfully sent!" = "Su informe fue enviado con éxito!";
 
 /* paint */
 "Zoom" = "Zoom";
