--- a/src/Catty/Resources/Localization/id.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/id.lproj/Localizable.strings
@@ -8,10 +8,16 @@
 "Abc" = "Abc";
 
 /* No comment provided by engineer. */
+"About" = "Tentang";
+
+/* No comment provided by engineer. */
 "About Catrobat" = "Tentang Catrobat";
 
 /* No comment provided by engineer. */
 "About Pocket Code" = "Tentang Pocket Code";
+
+/* No comment provided by engineer. */
+"About Us" = "About Us";
 
 /* No comment provided by engineer. */
 "absolute value" = "nilai mutlak";
@@ -143,6 +149,9 @@
 "Arduino extension" = "Batu bata Arduino";
 
 /* No comment provided by engineer. */
+"Are you sure you want to delete your account? This cannot be undone!" = "Are you sure you want to delete your account? This cannot be undone!";
+
+/* No comment provided by engineer. */
 "Ask " = "Meminta ";
 
 /* No comment provided by engineer. */
@@ -261,6 +270,9 @@
 
 /* No comment provided by engineer. */
 "Catrobat community" = "Komunitas Catrobat";
+
+/* No comment provided by engineer. */
+"Catrobat website" = "Catrobat website";
 
 /* No comment provided by engineer. */
 "ceiling" = "ceil";
@@ -426,6 +438,9 @@
 
 /* No comment provided by engineer. */
 "Delete" = "Hapus";
+
+/* No comment provided by engineer. */
+"Delete account" = "Hapus akun";
 
 /* No comment provided by engineer. */
 "Delete actors or objects" = "Hapus aktor atau objek";
@@ -664,9 +679,6 @@
 /* No comment provided by engineer. */
 "End of Loop" = "Akhir Ikal";
 
-/* No comment provided by engineer. */
-"Enter a reason" = "Masukkan alasan";
-
 /* Placeholder for add image-name input field */
 "Enter your image name here..." = "Masukkan nama citra di sini...";
 
@@ -698,9 +710,6 @@
 "Error" = "Kesalahan";
 
 /* No comment provided by engineer. */
-"Error occurred while reporting the project. Please try again later." = "Terjadi kesalahan saat melaporkan proyek. Silakan coba lagi nanti.";
-
-/* No comment provided by engineer. */
 "Error saving file" = "Terjadi kesalahan saat menyimpan file";
 
 /* No comment provided by engineer. */
@@ -708,6 +717,9 @@
 
 /* No comment provided by engineer. */
 "exponent" = "eksponen";
+
+/* No comment provided by engineer. */
+"Extensions" = "Extensions";
 
 /* No comment provided by engineer. */
 "FA" = "FA";
@@ -845,6 +857,9 @@
 "head top y" = "kepala atas y";
 
 /* No comment provided by engineer. */
+"height of object with ID" = "height of object with ID";
+
+/* No comment provided by engineer. */
 "Hello!" = "Halo!";
 
 /* No comment provided by engineer. */
@@ -864,6 +879,9 @@
 
 /* No comment provided by engineer. */
 "hour" = "jam";
+
+/* No comment provided by engineer. */
+"ID of detected object" = "ID objek yang terdeteksi";
 
 /* No comment provided by engineer. */
 "If" = "If";
@@ -959,6 +977,9 @@
 "LA" = "LA";
 
 /* No comment provided by engineer. */
+"label of object with ID" = "label of object with ID";
+
+/* No comment provided by engineer. */
 "Last access" = "Akses terakhir";
 
 /* No comment provided by engineer. */
@@ -980,10 +1001,22 @@
 "Left" = "Kiri";
 
 /* No comment provided by engineer. */
+"left ankle x" = "pergelangan kaki kiri x";
+
+/* No comment provided by engineer. */
+"left ankle y" = "pergelangan kaki kiri y";
+
+/* No comment provided by engineer. */
 "left ear x" = "telinga kiri x";
 
 /* No comment provided by engineer. */
 "left ear y" = "berangkat lebih awal";
+
+/* No comment provided by engineer. */
+"left elbow x" = "siku kiri x";
+
+/* No comment provided by engineer. */
+"left elbow y" = "siku kiri y";
 
 /* No comment provided by engineer. */
 "left eye center x" = "mata kiri tengah x";
@@ -1020,6 +1053,60 @@
 
 /* No comment provided by engineer. */
 "left eyebrow outer y" = "left eyebrow outer y";
+
+/* No comment provided by engineer. */
+"left hip x" = "pinggul kiri x";
+
+/* No comment provided by engineer. */
+"left hip y" = "pinggul kiri y";
+
+/* No comment provided by engineer. */
+"left index knuckle x" = "buku jari telunjuk kiri x";
+
+/* No comment provided by engineer. */
+"left index knuckle y" = "buku jari telunjuk kiri y";
+
+/* No comment provided by engineer. */
+"left knee x" = "lutut kiri x";
+
+/* No comment provided by engineer. */
+"left knee y" = "lutut kiri y";
+
+/* No comment provided by engineer. */
+"left middle finger knuckle x" = "left middle finger knuckle x";
+
+/* No comment provided by engineer. */
+"left middle finger knuckle y" = "left middle finger knuckle y";
+
+/* No comment provided by engineer. */
+"left pinky knuckle x" = "buku jari kelingking kiri x";
+
+/* No comment provided by engineer. */
+"left pinky knuckle y" = "buku jari kelingking kiri y";
+
+/* No comment provided by engineer. */
+"left ring finger knuckle x" = "left ring finger knuckle x";
+
+/* No comment provided by engineer. */
+"left ring finger knuckle y" = "left ring finger knuckle y";
+
+/* No comment provided by engineer. */
+"left shoulder x" = "bahu kiri x";
+
+/* No comment provided by engineer. */
+"left shoulder y" = "bahu kiri y";
+
+/* No comment provided by engineer. */
+"left thumb knuckle x" = "buku jari jempol kiri x";
+
+/* No comment provided by engineer. */
+"left thumb knuckle y" = "buku jari jempol kiri y";
+
+/* No comment provided by engineer. */
+"left wrist x" = "pergelangan tangan kiri x";
+
+/* No comment provided by engineer. */
+"left wrist y" = "pergelangan tangan kiri y";
 
 /* No comment provided by engineer. */
 "left-right only" = "kiri kanan saja";
@@ -1241,6 +1328,12 @@
 "natural logarithm" = "logaritma natural";
 
 /* No comment provided by engineer. */
+"neck x" = "leher x";
+
+/* No comment provided by engineer. */
+"neck y" = "leher y";
+
+/* No comment provided by engineer. */
 "New" = "Baru";
 
 /* paint */
@@ -1295,9 +1388,6 @@
 "No search results" = "Tidak ada hasil pencarian";
 
 /* No comment provided by engineer. */
-"No whitespace character allowed" = "Tidak ada karakter spasi yang diperbolehkan";
-
-/* No comment provided by engineer. */
 "nose x" = "hidung x";
 
 /* No comment provided by engineer. */
@@ -1328,6 +1418,9 @@
 "number of items" = "jumlah item";
 
 /* No comment provided by engineer. */
+"number of text blocks" = "jumlah blok teks";
+
+/* No comment provided by engineer. */
 "Numbers" = "Nomor";
 
 /* No comment provided by engineer. */
@@ -1335,6 +1428,12 @@
 
 /* No comment provided by engineer. */
 "Object or actor name" = "Objek atau nama aktor";
+
+/* No comment provided by engineer. */
+"Object recognition" = "Pengenalan objek";
+
+/* No comment provided by engineer. */
+"object with ID visible" = "object with ID visible";
 
 /* No comment provided by engineer. */
 "Oct" = "Okt";
@@ -1444,9 +1543,6 @@
 /* No comment provided by engineer. */
 "Please enter at least %lu character(s)." = "Harap masukkan setidaknya %lu karakter.";
 
-/* No comment provided by engineer. */
-"Please log in to report this project as inappropriate" = "Harap masuk untuk melaporkan proyek ini sebagai tidak pantas";
-
 /* paint */
 "Please pick a tool" = "Silakan pilih sebuah alat";
 
@@ -1514,6 +1610,9 @@
 "Previous look" = "Tampilan sebelumnya";
 
 /* No comment provided by engineer. */
+"Privacy" = "Privacy";
+
+/* No comment provided by engineer. */
 "Privacy Settings" = "Pengaturan Privasi";
 
 /* No comment provided by engineer. */
@@ -1562,9 +1661,6 @@
 "red" = "merah";
 
 /* No comment provided by engineer. */
-"Register" = "Daftar";
-
-/* No comment provided by engineer. */
 "Registration successful" = "Pendaftaran berhasil";
 
 /* No comment provided by engineer. */
@@ -1597,9 +1693,6 @@
 /* No comment provided by engineer. */
 "Replace item in list" = "Ganti item dalam daftar";
 
-/* No comment provided by engineer. */
-"Report as inappropriate" = "Laporkan sebagai tidak pantas";
-
 /* paint */
 "Resize" = "Ubah ukuran";
 
@@ -1613,10 +1706,22 @@
 "Right" = "Kanan";
 
 /* No comment provided by engineer. */
+"right ankle x" = "pergelangan kaki kanan x";
+
+/* No comment provided by engineer. */
+"right ankle y" = "pergelangan kaki kanan y";
+
+/* No comment provided by engineer. */
 "right ear x" = "telinga kanan x";
 
 /* No comment provided by engineer. */
 "right ear y" = "telinga kanan y";
+
+/* No comment provided by engineer. */
+"right elbow x" = "siku kanan x";
+
+/* No comment provided by engineer. */
+"right elbow y" = "siku kanan y";
 
 /* No comment provided by engineer. */
 "right eye center x" = "pusat mata kanan x";
@@ -1653,6 +1758,60 @@
 
 /* No comment provided by engineer. */
 "right eyebrow outer y" = "right eyebrow outer y";
+
+/* No comment provided by engineer. */
+"right hip x" = "pinggul kanan x";
+
+/* No comment provided by engineer. */
+"right hip y" = "pinggul kanan y";
+
+/* No comment provided by engineer. */
+"right index knuckle x" = "buku jari telunjuk kanan x";
+
+/* No comment provided by engineer. */
+"right index knuckle y" = "buku jari telunjuk kanan y";
+
+/* No comment provided by engineer. */
+"right knee x" = "lutut kanan x";
+
+/* No comment provided by engineer. */
+"right knee y" = "lutut kanan y";
+
+/* No comment provided by engineer. */
+"right middle finger knuckle x" = "right middle finger knuckle x";
+
+/* No comment provided by engineer. */
+"right middle finger knuckle y" = "right middle finger knuckle y";
+
+/* No comment provided by engineer. */
+"right pinky knuckle x" = "buku jari kelingking kanan x";
+
+/* No comment provided by engineer. */
+"right pinky knuckle y" = "buku jari kelingking kanan y";
+
+/* No comment provided by engineer. */
+"right ring finger knuckle x" = "right ring finger knuckle x";
+
+/* No comment provided by engineer. */
+"right ring finger knuckle y" = "right ring finger knuckle y";
+
+/* No comment provided by engineer. */
+"right shoulder x" = "bahu kanan x";
+
+/* No comment provided by engineer. */
+"right shoulder y" = "bahu kanan y";
+
+/* No comment provided by engineer. */
+"right thumb knuckle x" = "buku jari jempol kanan x";
+
+/* No comment provided by engineer. */
+"right thumb knuckle y" = "buku jari jempol kanan y";
+
+/* No comment provided by engineer. */
+"right wrist x" = "pergelangan tangan kanan x";
+
+/* No comment provided by engineer. */
+"right wrist y" = "pergelangan tangan kanan y";
 
 /* paint */
 "Rotate" = "Putar";
@@ -1811,6 +1970,9 @@
 "Set tempo to" = "Setel tempo ke";
 
 /* No comment provided by engineer. */
+"Set thread color to" = "Setel warna utas ke";
+
+/* No comment provided by engineer. */
 "Set transparency " = "Atur transparansi ";
 
 /* No comment provided by engineer. */
@@ -1904,6 +2066,9 @@
 "Start sound and wait" = "Mulai suara dan tunggu";
 
 /* No comment provided by engineer. */
+"Start triple stitch with length" = "Mulai tusuk tiga kali dengan panjang";
+
+/* No comment provided by engineer. */
 "Start zigzag stitch with length" = "Mulailah jahitan zigzag dengan panjang";
 
 /* No comment provided by engineer. */
@@ -1976,7 +2141,28 @@
 "Text" = "Teks";
 
 /* No comment provided by engineer. */
+"text block from camera" = "blok teks dari kamera";
+
+/* No comment provided by engineer. */
+"text block language from camera" = "teks blok bahasa dari kamera";
+
+/* No comment provided by engineer. */
+"text block size from camera" = "ukuran blok teks dari kamera";
+
+/* No comment provided by engineer. */
+"text block x from camera" = "blok teks x dari kamera";
+
+/* No comment provided by engineer. */
+"text block y from camera" = "blok teks y dari kamera";
+
+/* No comment provided by engineer. */
+"text from camera" = "teks dari kamera";
+
+/* No comment provided by engineer. */
 "Text message:" = "Pesan Teks:";
+
+/* No comment provided by engineer. */
+"Text recognition" = "Pengenalan teks";
 
 /* paint */
 "Text:" = "Teks:";
@@ -2079,6 +2265,9 @@
 
 /* No comment provided by engineer. */
 "true" = "benar";
+
+/* No comment provided by engineer. */
+"Trusted domains" = "Trusted domains";
 
 /* No comment provided by engineer. */
 "Tu" = "Sel";
@@ -2204,6 +2393,9 @@
 "View" = "Melihat";
 
 /* No comment provided by engineer. */
+"View Terms of Use and Service" = "View Terms of Use and Service";
+
+/* No comment provided by engineer. */
 "Views" = "Tampilan";
 
 /* No comment provided by engineer. */
@@ -2248,6 +2440,9 @@
 /* No comment provided by engineer. */
 "When you receive" = "Bila Anda menerima";
 
+/* No comment provided by engineer. */
+"width of object with ID" = "width of object with ID";
+
 /* paint */
 "Width selection" = "Pemilihan lebar";
 
@@ -2258,7 +2453,13 @@
 "Wooden Flute" = "Seruling Kayu";
 
 /* No comment provided by engineer. */
+"X of object with ID" = "X of object with ID";
+
+/* No comment provided by engineer. */
 "x: " = "x: ";
+
+/* No comment provided by engineer. */
+"Y of object with ID" = "Y of object with ID";
 
 /* No comment provided by engineer. */
 "y: " = "y: ";
@@ -2276,6 +2477,9 @@
 "You have already downloaded this project!" = "Anda sudah mengunduh proyek ini!";
 
 /* No comment provided by engineer. */
+"Your account has been successfully deleted." = "Your account has been successfully deleted.";
+
+/* No comment provided by engineer. */
 "Your answer" = "Jawaban Anda";
 
 /* No comment provided by engineer. */
@@ -2283,9 +2487,6 @@
 
 /* No comment provided by engineer. */
 "Your project was uploaded to the Catrobat community where others can use and download it." = "Proyek Anda telah diunggah ke komunitas Catrobat di mana orang lain dapat menggunakan dan mengunduhnya.";
-
-/* No comment provided by engineer. */
-"Your report was successfully sent!" = "Laporan Anda berhasil dikirim!";
 
 /* paint */
 "Zoom" = "Perbesar";
