--- a/src/Catty/Resources/Localization/ps.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/ps.lproj/Localizable.strings
@@ -8,10 +8,16 @@
 "Abc" = "Abc";
 
 /* No comment provided by engineer. */
+"About" = "په اړه";
+
+/* No comment provided by engineer. */
 "About Catrobat" = "د Catrobat په اړه";
 
 /* No comment provided by engineer. */
 "About Pocket Code" = "د Pocket Code په اړه";
+
+/* No comment provided by engineer. */
+"About Us" = "About Us";
 
 /* No comment provided by engineer. */
 "absolute value" = "مطلق ارزښت";
@@ -143,6 +149,9 @@
 "Arduino extension" = "د Arduino توسیع";
 
 /* No comment provided by engineer. */
+"Are you sure you want to delete your account? This cannot be undone!" = "Are you sure you want to delete your account? This cannot be undone!";
+
+/* No comment provided by engineer. */
 "Ask " = "پوښتنه ";
 
 /* No comment provided by engineer. */
@@ -261,6 +270,9 @@
 
 /* No comment provided by engineer. */
 "Catrobat community" = "د کاټروبیټ ټولنه";
+
+/* No comment provided by engineer. */
+"Catrobat website" = "Catrobat website";
 
 /* No comment provided by engineer. */
 "ceiling" = "چت";
@@ -426,6 +438,9 @@
 
 /* No comment provided by engineer. */
 "Delete" = "پاک کړی";
+
+/* No comment provided by engineer. */
+"Delete account" = "حساب ړنګ کړئ";
 
 /* No comment provided by engineer. */
 "Delete actors or objects" = "لوبغاړي یا توکي حذف کړئ";
@@ -664,9 +679,6 @@
 /* No comment provided by engineer. */
 "End of Loop" = "د لوپ پای";
 
-/* No comment provided by engineer. */
-"Enter a reason" = "یو دلیل داخل کړئ";
-
 /* Placeholder for add image-name input field */
 "Enter your image name here..." = "د خپل انځور نوم دلته ولیکئ...";
 
@@ -698,9 +710,6 @@
 "Error" = "تیروتنه";
 
 /* No comment provided by engineer. */
-"Error occurred while reporting the project. Please try again later." = "د پروژې د راپور ورکولو په وخت کې تېروتنه رامنځته شوه. مهرباني وکړئ وروسته بیا هڅه وکړئ.";
-
-/* No comment provided by engineer. */
 "Error saving file" = "د فایل خوندي کولو کې تېروتنه";
 
 /* No comment provided by engineer. */
@@ -708,6 +717,9 @@
 
 /* No comment provided by engineer. */
 "exponent" = "توضیح کوونکی";
+
+/* No comment provided by engineer. */
+"Extensions" = "Extensions";
 
 /* No comment provided by engineer. */
 "FA" = "FA";
@@ -845,6 +857,9 @@
 "head top y" = "د سر سر y";
 
 /* No comment provided by engineer. */
+"height of object with ID" = "height of object with ID";
+
+/* No comment provided by engineer. */
 "Hello!" = "سلام!";
 
 /* No comment provided by engineer. */
@@ -864,6 +879,9 @@
 
 /* No comment provided by engineer. */
 "hour" = "ساعت";
+
+/* No comment provided by engineer. */
+"ID of detected object" = "د کشف شوي څیز ID";
 
 /* No comment provided by engineer. */
 "If" = "که";
@@ -959,6 +977,9 @@
 "LA" = "وروستی لاسرسی";
 
 /* No comment provided by engineer. */
+"label of object with ID" = "label of object with ID";
+
+/* No comment provided by engineer. */
 "Last access" = "وروستی لاسرسی";
 
 /* No comment provided by engineer. */
@@ -980,10 +1001,22 @@
 "Left" = "کیڼ";
 
 /* No comment provided by engineer. */
+"left ankle x" = "چپه پښه x";
+
+/* No comment provided by engineer. */
+"left ankle y" = "چپه پښه y";
+
+/* No comment provided by engineer. */
 "left ear x" = "کیڼ غوږ x";
 
 /* No comment provided by engineer. */
 "left ear y" = "کیڼ غوږ y";
+
+/* No comment provided by engineer. */
+"left elbow x" = "کیڼ اړخ x";
+
+/* No comment provided by engineer. */
+"left elbow y" = "کیڼ اړخ y";
 
 /* No comment provided by engineer. */
 "left eye center x" = "د کیڼ سترګو مرکز x";
@@ -1020,6 +1053,60 @@
 
 /* No comment provided by engineer. */
 "left eyebrow outer y" = "left eyebrow outer y";
+
+/* No comment provided by engineer. */
+"left hip x" = "کیڼ هپ x";
+
+/* No comment provided by engineer. */
+"left hip y" = "کیڼ هپ y";
+
+/* No comment provided by engineer. */
+"left index knuckle x" = "د کیڼ لاسي شاخص knuckle x";
+
+/* No comment provided by engineer. */
+"left index knuckle y" = "کیڼ انډیکس نوکل y";
+
+/* No comment provided by engineer. */
+"left knee x" = "کیڼ زنګون x";
+
+/* No comment provided by engineer. */
+"left knee y" = "کیڼ زنګون y";
+
+/* No comment provided by engineer. */
+"left middle finger knuckle x" = "left middle finger knuckle x";
+
+/* No comment provided by engineer. */
+"left middle finger knuckle y" = "left middle finger knuckle y";
+
+/* No comment provided by engineer. */
+"left pinky knuckle x" = "کیڼ ګلابي ټوکر x";
+
+/* No comment provided by engineer. */
+"left pinky knuckle y" = "کیڼ ګلابي ټوکر y";
+
+/* No comment provided by engineer. */
+"left ring finger knuckle x" = "left ring finger knuckle x";
+
+/* No comment provided by engineer. */
+"left ring finger knuckle y" = "left ring finger knuckle y";
+
+/* No comment provided by engineer. */
+"left shoulder x" = "کیڼ اوږه x";
+
+/* No comment provided by engineer. */
+"left shoulder y" = "چپ اوږه y";
+
+/* No comment provided by engineer. */
+"left thumb knuckle x" = "د چپه ګوتې ګوتې x";
+
+/* No comment provided by engineer. */
+"left thumb knuckle y" = "چپه ګوتې ګوتې y";
+
+/* No comment provided by engineer. */
+"left wrist x" = "کیڼ لاس x";
+
+/* No comment provided by engineer. */
+"left wrist y" = "چپ لاس y";
 
 /* No comment provided by engineer. */
 "left-right only" = "یوازې کیڼ - ښي";
@@ -1241,6 +1328,12 @@
 "natural logarithm" = "طبیعي لوګاریتم";
 
 /* No comment provided by engineer. */
+"neck x" = "غاړه x";
+
+/* No comment provided by engineer. */
+"neck y" = "غاړه y";
+
+/* No comment provided by engineer. */
 "New" = "نوے";
 
 /* paint */
@@ -1295,9 +1388,6 @@
 "No search results" = "د لټون پایلې نشته";
 
 /* No comment provided by engineer. */
-"No whitespace character allowed" = "د سپین سپیس کرکټر اجازه نشته";
-
-/* No comment provided by engineer. */
 "nose x" = "پوزه x";
 
 /* No comment provided by engineer. */
@@ -1328,6 +1418,9 @@
 "number of items" = "د توکو شمیر";
 
 /* No comment provided by engineer. */
+"number of text blocks" = "د متن بلاکونو شمیر";
+
+/* No comment provided by engineer. */
 "Numbers" = "شمېرې";
 
 /* No comment provided by engineer. */
@@ -1335,6 +1428,12 @@
 
 /* No comment provided by engineer. */
 "Object or actor name" = "د څیز یا اداکار نوم";
+
+/* No comment provided by engineer. */
+"Object recognition" = "د څیز پیژندنه";
+
+/* No comment provided by engineer. */
+"object with ID visible" = "object with ID visible";
 
 /* No comment provided by engineer. */
 "Oct" = "اکتوبر";
@@ -1444,9 +1543,6 @@
 /* No comment provided by engineer. */
 "Please enter at least %lu character(s)." = "مهرباني وکړئ لږ تر لږه %lu کرکټرونه دننه کړئ.";
 
-/* No comment provided by engineer. */
-"Please log in to report this project as inappropriate" = "مهرباني وکړئ د دې پروژې د نامناسب په توګه راپور ورکولو لپاره ننوتل";
-
 /* paint */
 "Please pick a tool" = "مهرباني وکړئ یوه وسیله غوره کړئ";
 
@@ -1514,6 +1610,9 @@
 "Previous look" = "مخکینی نظر";
 
 /* No comment provided by engineer. */
+"Privacy" = "Privacy";
+
+/* No comment provided by engineer. */
 "Privacy Settings" = "د محرمیت ترتیبات";
 
 /* No comment provided by engineer. */
@@ -1562,9 +1661,6 @@
 "red" = "سور";
 
 /* No comment provided by engineer. */
-"Register" = "راجستر";
-
-/* No comment provided by engineer. */
 "Registration successful" = "نوم لیکنه بریالۍ شوه";
 
 /* No comment provided by engineer. */
@@ -1597,9 +1693,6 @@
 /* No comment provided by engineer. */
 "Replace item in list" = "په لیست کې توکي بدل کړئ";
 
-/* No comment provided by engineer. */
-"Report as inappropriate" = "د نامناسب په توګه راپور ورکړئ";
-
 /* paint */
 "Resize" = "بیا اندازه کول";
 
@@ -1613,10 +1706,22 @@
 "Right" = "سمه ده";
 
 /* No comment provided by engineer. */
+"right ankle x" = "ښي پښه x";
+
+/* No comment provided by engineer. */
+"right ankle y" = "ښي پښه y";
+
+/* No comment provided by engineer. */
 "right ear x" = "ښي غوږ x";
 
 /* No comment provided by engineer. */
 "right ear y" = "ښي غوږ y";
+
+/* No comment provided by engineer. */
+"right elbow x" = "ښي لور ته x";
+
+/* No comment provided by engineer. */
+"right elbow y" = "ښۍ کوڼۍ y";
 
 /* No comment provided by engineer. */
 "right eye center x" = "د ښي سترګو مرکز x";
@@ -1653,6 +1758,60 @@
 
 /* No comment provided by engineer. */
 "right eyebrow outer y" = "right eyebrow outer y";
+
+/* No comment provided by engineer. */
+"right hip x" = "ښي هپ x";
+
+/* No comment provided by engineer. */
+"right hip y" = "ښي هپ y";
+
+/* No comment provided by engineer. */
+"right index knuckle x" = "د ښي شاخص knuckle x";
+
+/* No comment provided by engineer. */
+"right index knuckle y" = "د حق شاخص knuckle y";
+
+/* No comment provided by engineer. */
+"right knee x" = "ښي زنګون x";
+
+/* No comment provided by engineer. */
+"right knee y" = "ښي زنګون y";
+
+/* No comment provided by engineer. */
+"right middle finger knuckle x" = "right middle finger knuckle x";
+
+/* No comment provided by engineer. */
+"right middle finger knuckle y" = "right middle finger knuckle y";
+
+/* No comment provided by engineer. */
+"right pinky knuckle x" = "ښي ګلابي ټوکر x";
+
+/* No comment provided by engineer. */
+"right pinky knuckle y" = "ښي ګلابي ټوکر y";
+
+/* No comment provided by engineer. */
+"right ring finger knuckle x" = "right ring finger knuckle x";
+
+/* No comment provided by engineer. */
+"right ring finger knuckle y" = "right ring finger knuckle y";
+
+/* No comment provided by engineer. */
+"right shoulder x" = "ښي اوږه x";
+
+/* No comment provided by engineer. */
+"right shoulder y" = "ښي اوږه y";
+
+/* No comment provided by engineer. */
+"right thumb knuckle x" = "د ښي ګوتې ګوتې x";
+
+/* No comment provided by engineer. */
+"right thumb knuckle y" = "د ښي ګوتې ګوتې y";
+
+/* No comment provided by engineer. */
+"right wrist x" = "ښي لاس x";
+
+/* No comment provided by engineer. */
+"right wrist y" = "ښي لاس y";
 
 /* paint */
 "Rotate" = "وګرځوئ";
@@ -1811,6 +1970,9 @@
 "Set tempo to" = "د وخت لپاره تنظیم کړئ";
 
 /* No comment provided by engineer. */
+"Set thread color to" = "د تار رنګ ترتیب کړئ";
+
+/* No comment provided by engineer. */
 "Set transparency " = "شفافیت تنظیم کړئ ";
 
 /* No comment provided by engineer. */
@@ -1904,6 +2066,9 @@
 "Start sound and wait" = "غږ پیل کړئ او انتظار وکړئ";
 
 /* No comment provided by engineer. */
+"Start triple stitch with length" = "د اوږدوالي سره درې ګونی ډنډ پیل کړئ";
+
+/* No comment provided by engineer. */
 "Start zigzag stitch with length" = "د اوږدوالي سره زیګزګ ډنډ پیل کړئ";
 
 /* No comment provided by engineer. */
@@ -1976,7 +2141,28 @@
 "Text" = "متن";
 
 /* No comment provided by engineer. */
+"text block from camera" = "د کیمرې څخه د متن بلاک";
+
+/* No comment provided by engineer. */
+"text block language from camera" = "د کیمرې څخه د متن بلاک ژبه";
+
+/* No comment provided by engineer. */
+"text block size from camera" = "د کیمرې څخه د متن بلاک اندازه";
+
+/* No comment provided by engineer. */
+"text block x from camera" = "د کیمرې څخه متن بلاک x";
+
+/* No comment provided by engineer. */
+"text block y from camera" = "د کیمرې څخه متن بلاک y";
+
+/* No comment provided by engineer. */
+"text from camera" = "د کیمرې څخه متن";
+
+/* No comment provided by engineer. */
 "Text message:" = "د متن پیغام:";
+
+/* No comment provided by engineer. */
+"Text recognition" = "د متن پیژندنه";
 
 /* paint */
 "Text:" = "متن:";
@@ -2079,6 +2265,9 @@
 
 /* No comment provided by engineer. */
 "true" = "ریښتیا";
+
+/* No comment provided by engineer. */
+"Trusted domains" = "Trusted domains";
 
 /* No comment provided by engineer. */
 "Tu" = "سه شنبه";
@@ -2204,6 +2393,9 @@
 "View" = "لید";
 
 /* No comment provided by engineer. */
+"View Terms of Use and Service" = "View Terms of Use and Service";
+
+/* No comment provided by engineer. */
 "Views" = "لیدونه";
 
 /* No comment provided by engineer. */
@@ -2248,6 +2440,9 @@
 /* No comment provided by engineer. */
 "When you receive" = "کله چې تاسو ترلاسه کوئ";
 
+/* No comment provided by engineer. */
+"width of object with ID" = "width of object with ID";
+
 /* paint */
 "Width selection" = "د عرض انتخاب";
 
@@ -2258,7 +2453,13 @@
 "Wooden Flute" = "د لرګیو فلیټ";
 
 /* No comment provided by engineer. */
+"X of object with ID" = "X of object with ID";
+
+/* No comment provided by engineer. */
 "x: " = "x: ";
+
+/* No comment provided by engineer. */
+"Y of object with ID" = "Y of object with ID";
 
 /* No comment provided by engineer. */
 "y: " = "y: ";
@@ -2276,6 +2477,9 @@
 "You have already downloaded this project!" = "تاسو لا دمخه دا پروژه ډاونلوډ کړې ده!";
 
 /* No comment provided by engineer. */
+"Your account has been successfully deleted." = "Your account has been successfully deleted.";
+
+/* No comment provided by engineer. */
 "Your answer" = "ستاسو ځواب";
 
 /* No comment provided by engineer. */
@@ -2283,9 +2487,6 @@
 
 /* No comment provided by engineer. */
 "Your project was uploaded to the Catrobat community where others can use and download it." = "ستاسو پروژه د Catrobat ټولنې ته اپلوډ شوې چیرې چې نور کولی شي دا وکاروي او ډاونلوډ کړي.";
-
-/* No comment provided by engineer. */
-"Your report was successfully sent!" = "ستاسو راپور په بریالیتوب سره واستول شو!";
 
 /* paint */
 "Zoom" = "زوم";
