--- a/src/Catty/Resources/Localization/sv.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/sv.lproj/Localizable.strings
@@ -8,10 +8,16 @@
 "Abc" = "Abc";
 
 /* No comment provided by engineer. */
+"About" = "Om";
+
+/* No comment provided by engineer. */
 "About Catrobat" = "Om Catrobat";
 
 /* No comment provided by engineer. */
 "About Pocket Code" = "Om Pocket Code";
+
+/* No comment provided by engineer. */
+"About Us" = "About Us";
 
 /* No comment provided by engineer. */
 "absolute value" = "abs";
@@ -143,6 +149,9 @@
 "Arduino extension" = "Arduino extension";
 
 /* No comment provided by engineer. */
+"Are you sure you want to delete your account? This cannot be undone!" = "Are you sure you want to delete your account? This cannot be undone!";
+
+/* No comment provided by engineer. */
 "Ask " = "Fråga ";
 
 /* No comment provided by engineer. */
@@ -261,6 +270,9 @@
 
 /* No comment provided by engineer. */
 "Catrobat community" = "Catrobat community";
+
+/* No comment provided by engineer. */
+"Catrobat website" = "Catrobat website";
 
 /* No comment provided by engineer. */
 "ceiling" = "tak";
@@ -426,6 +438,9 @@
 
 /* No comment provided by engineer. */
 "Delete" = "Radera";
+
+/* No comment provided by engineer. */
+"Delete account" = "Ta bort konto";
 
 /* No comment provided by engineer. */
 "Delete actors or objects" = "Ta bort aktörer eller objekt";
@@ -664,9 +679,6 @@
 /* No comment provided by engineer. */
 "End of Loop" = "Slutet av slingan";
 
-/* No comment provided by engineer. */
-"Enter a reason" = "Ange en orsak";
-
 /* Placeholder for add image-name input field */
 "Enter your image name here..." = "Ange din bilds namn här...";
 
@@ -698,9 +710,6 @@
 "Error" = "Fel";
 
 /* No comment provided by engineer. */
-"Error occurred while reporting the project. Please try again later." = "Error occurred while reporting the project. Please try again later.";
-
-/* No comment provided by engineer. */
 "Error saving file" = "Error saving file";
 
 /* No comment provided by engineer. */
@@ -708,6 +717,9 @@
 
 /* No comment provided by engineer. */
 "exponent" = "exp";
+
+/* No comment provided by engineer. */
+"Extensions" = "Extensions";
 
 /* No comment provided by engineer. */
 "FA" = "FA";
@@ -845,6 +857,9 @@
 "head top y" = "head top y";
 
 /* No comment provided by engineer. */
+"height of object with ID" = "height of object with ID";
+
+/* No comment provided by engineer. */
 "Hello!" = "Hallå!";
 
 /* No comment provided by engineer. */
@@ -864,6 +879,9 @@
 
 /* No comment provided by engineer. */
 "hour" = "timme";
+
+/* No comment provided by engineer. */
+"ID of detected object" = "ID of detected object";
 
 /* No comment provided by engineer. */
 "If" = "Om";
@@ -959,6 +977,9 @@
 "LA" = "LA";
 
 /* No comment provided by engineer. */
+"label of object with ID" = "label of object with ID";
+
+/* No comment provided by engineer. */
 "Last access" = "Sista tillgång";
 
 /* No comment provided by engineer. */
@@ -980,10 +1001,22 @@
 "Left" = "Vänster";
 
 /* No comment provided by engineer. */
+"left ankle x" = "left ankle x";
+
+/* No comment provided by engineer. */
+"left ankle y" = "left ankle y";
+
+/* No comment provided by engineer. */
 "left ear x" = "left ear x";
 
 /* No comment provided by engineer. */
 "left ear y" = "left ear y";
+
+/* No comment provided by engineer. */
+"left elbow x" = "left elbow x";
+
+/* No comment provided by engineer. */
+"left elbow y" = "left elbow y";
 
 /* No comment provided by engineer. */
 "left eye center x" = "left eye center x";
@@ -1020,6 +1053,60 @@
 
 /* No comment provided by engineer. */
 "left eyebrow outer y" = "left eyebrow outer y";
+
+/* No comment provided by engineer. */
+"left hip x" = "left hip x";
+
+/* No comment provided by engineer. */
+"left hip y" = "left hip y";
+
+/* No comment provided by engineer. */
+"left index knuckle x" = "left index knuckle x";
+
+/* No comment provided by engineer. */
+"left index knuckle y" = "left index knuckle y";
+
+/* No comment provided by engineer. */
+"left knee x" = "left knee x";
+
+/* No comment provided by engineer. */
+"left knee y" = "left knee y";
+
+/* No comment provided by engineer. */
+"left middle finger knuckle x" = "left middle finger knuckle x";
+
+/* No comment provided by engineer. */
+"left middle finger knuckle y" = "left middle finger knuckle y";
+
+/* No comment provided by engineer. */
+"left pinky knuckle x" = "left pinky knuckle x";
+
+/* No comment provided by engineer. */
+"left pinky knuckle y" = "left pinky knuckle y";
+
+/* No comment provided by engineer. */
+"left ring finger knuckle x" = "left ring finger knuckle x";
+
+/* No comment provided by engineer. */
+"left ring finger knuckle y" = "left ring finger knuckle y";
+
+/* No comment provided by engineer. */
+"left shoulder x" = "left shoulder x";
+
+/* No comment provided by engineer. */
+"left shoulder y" = "left shoulder y";
+
+/* No comment provided by engineer. */
+"left thumb knuckle x" = "left thumb knuckle x";
+
+/* No comment provided by engineer. */
+"left thumb knuckle y" = "left thumb knuckle y";
+
+/* No comment provided by engineer. */
+"left wrist x" = "left wrist x";
+
+/* No comment provided by engineer. */
+"left wrist y" = "left wrist y";
 
 /* No comment provided by engineer. */
 "left-right only" = "left-right only";
@@ -1241,6 +1328,12 @@
 "natural logarithm" = "ln";
 
 /* No comment provided by engineer. */
+"neck x" = "neck x";
+
+/* No comment provided by engineer. */
+"neck y" = "neck y";
+
+/* No comment provided by engineer. */
 "New" = "Ny";
 
 /* paint */
@@ -1295,9 +1388,6 @@
 "No search results" = "Inga sökresultat";
 
 /* No comment provided by engineer. */
-"No whitespace character allowed" = "No whitespace character allowed";
-
-/* No comment provided by engineer. */
 "nose x" = "nose x";
 
 /* No comment provided by engineer. */
@@ -1328,6 +1418,9 @@
 "number of items" = "number_of_items";
 
 /* No comment provided by engineer. */
+"number of text blocks" = "antal textblock";
+
+/* No comment provided by engineer. */
 "Numbers" = "Nummer";
 
 /* No comment provided by engineer. */
@@ -1335,6 +1428,12 @@
 
 /* No comment provided by engineer. */
 "Object or actor name" = "Object or actor name";
+
+/* No comment provided by engineer. */
+"Object recognition" = "Object recognition";
+
+/* No comment provided by engineer. */
+"object with ID visible" = "object with ID visible";
 
 /* No comment provided by engineer. */
 "Oct" = "Okt";
@@ -1444,9 +1543,6 @@
 /* No comment provided by engineer. */
 "Please enter at least %lu character(s)." = "Ange minst %lu tecken.";
 
-/* No comment provided by engineer. */
-"Please log in to report this project as inappropriate" = "Please log in to report this project as inappropriate";
-
 /* paint */
 "Please pick a tool" = "Välj ett verktyg";
 
@@ -1514,6 +1610,9 @@
 "Previous look" = "Föregående utseende";
 
 /* No comment provided by engineer. */
+"Privacy" = "Privacy";
+
+/* No comment provided by engineer. */
 "Privacy Settings" = "Sekretessinställningar";
 
 /* No comment provided by engineer. */
@@ -1562,9 +1661,6 @@
 "red" = "röd";
 
 /* No comment provided by engineer. */
-"Register" = "Registrera";
-
-/* No comment provided by engineer. */
 "Registration successful" = "Registrering lyckades";
 
 /* No comment provided by engineer. */
@@ -1597,9 +1693,6 @@
 /* No comment provided by engineer. */
 "Replace item in list" = "Ersätt objekt i listan";
 
-/* No comment provided by engineer. */
-"Report as inappropriate" = "Rapportera som olämpligt";
-
 /* paint */
 "Resize" = "Ändra storlek";
 
@@ -1613,10 +1706,22 @@
 "Right" = "Höger";
 
 /* No comment provided by engineer. */
+"right ankle x" = "right ankle x";
+
+/* No comment provided by engineer. */
+"right ankle y" = "right ankle y";
+
+/* No comment provided by engineer. */
 "right ear x" = "right ear x";
 
 /* No comment provided by engineer. */
 "right ear y" = "right ear y";
+
+/* No comment provided by engineer. */
+"right elbow x" = "right elbow x";
+
+/* No comment provided by engineer. */
+"right elbow y" = "right elbow y";
 
 /* No comment provided by engineer. */
 "right eye center x" = "right eye center x";
@@ -1653,6 +1758,60 @@
 
 /* No comment provided by engineer. */
 "right eyebrow outer y" = "right eyebrow outer y";
+
+/* No comment provided by engineer. */
+"right hip x" = "right hip x";
+
+/* No comment provided by engineer. */
+"right hip y" = "right hip y";
+
+/* No comment provided by engineer. */
+"right index knuckle x" = "right index knuckle x";
+
+/* No comment provided by engineer. */
+"right index knuckle y" = "right index knuckle y";
+
+/* No comment provided by engineer. */
+"right knee x" = "right knee x";
+
+/* No comment provided by engineer. */
+"right knee y" = "right knee y";
+
+/* No comment provided by engineer. */
+"right middle finger knuckle x" = "right middle finger knuckle x";
+
+/* No comment provided by engineer. */
+"right middle finger knuckle y" = "right middle finger knuckle y";
+
+/* No comment provided by engineer. */
+"right pinky knuckle x" = "right pinky knuckle x";
+
+/* No comment provided by engineer. */
+"right pinky knuckle y" = "right pinky knuckle y";
+
+/* No comment provided by engineer. */
+"right ring finger knuckle x" = "right ring finger knuckle x";
+
+/* No comment provided by engineer. */
+"right ring finger knuckle y" = "right ring finger knuckle y";
+
+/* No comment provided by engineer. */
+"right shoulder x" = "right shoulder x";
+
+/* No comment provided by engineer. */
+"right shoulder y" = "right shoulder y";
+
+/* No comment provided by engineer. */
+"right thumb knuckle x" = "right thumb knuckle x";
+
+/* No comment provided by engineer. */
+"right thumb knuckle y" = "right thumb knuckle y";
+
+/* No comment provided by engineer. */
+"right wrist x" = "right wrist x";
+
+/* No comment provided by engineer. */
+"right wrist y" = "right wrist y";
 
 /* paint */
 "Rotate" = "Rotera";
@@ -1811,6 +1970,9 @@
 "Set tempo to" = "Ställ in tempo till";
 
 /* No comment provided by engineer. */
+"Set thread color to" = "Set thread color to";
+
+/* No comment provided by engineer. */
 "Set transparency " = "Ange genomskinlighet ";
 
 /* No comment provided by engineer. */
@@ -1904,6 +2066,9 @@
 "Start sound and wait" = "Starta ljud och vänta";
 
 /* No comment provided by engineer. */
+"Start triple stitch with length" = "Start triple stitch with length";
+
+/* No comment provided by engineer. */
 "Start zigzag stitch with length" = "Start zigzag stitch with length";
 
 /* No comment provided by engineer. */
@@ -1976,7 +2141,28 @@
 "Text" = "Text";
 
 /* No comment provided by engineer. */
+"text block from camera" = "text block from camera";
+
+/* No comment provided by engineer. */
+"text block language from camera" = "text block language from camera";
+
+/* No comment provided by engineer. */
+"text block size from camera" = "textblockets storlek från kamera";
+
+/* No comment provided by engineer. */
+"text block x from camera" = "textblock x från kamera";
+
+/* No comment provided by engineer. */
+"text block y from camera" = "textblock y från kamera";
+
+/* No comment provided by engineer. */
+"text from camera" = "text från kamera";
+
+/* No comment provided by engineer. */
 "Text message:" = "Textmeddelande:";
+
+/* No comment provided by engineer. */
+"Text recognition" = "Text recognition";
 
 /* paint */
 "Text:" = "Text:";
@@ -2079,6 +2265,9 @@
 
 /* No comment provided by engineer. */
 "true" = "Sant";
+
+/* No comment provided by engineer. */
+"Trusted domains" = "Trusted domains";
 
 /* No comment provided by engineer. */
 "Tu" = "Tis";
@@ -2204,6 +2393,9 @@
 "View" = "View";
 
 /* No comment provided by engineer. */
+"View Terms of Use and Service" = "View Terms of Use and Service";
+
+/* No comment provided by engineer. */
 "Views" = "visningar";
 
 /* No comment provided by engineer. */
@@ -2248,6 +2440,9 @@
 /* No comment provided by engineer. */
 "When you receive" = "När du tar emot";
 
+/* No comment provided by engineer. */
+"width of object with ID" = "width of object with ID";
+
 /* paint */
 "Width selection" = "Width selection";
 
@@ -2258,7 +2453,13 @@
 "Wooden Flute" = "Träflöjt";
 
 /* No comment provided by engineer. */
+"X of object with ID" = "X of object with ID";
+
+/* No comment provided by engineer. */
 "x: " = "x: ";
+
+/* No comment provided by engineer. */
+"Y of object with ID" = "Y of object with ID";
 
 /* No comment provided by engineer. */
 "y: " = "y:";
@@ -2276,6 +2477,9 @@
 "You have already downloaded this project!" = "Du har redan laddat ner detta projekt!";
 
 /* No comment provided by engineer. */
+"Your account has been successfully deleted." = "Your account has been successfully deleted.";
+
+/* No comment provided by engineer. */
 "Your answer" = "Ditt svar";
 
 /* No comment provided by engineer. */
@@ -2283,9 +2487,6 @@
 
 /* No comment provided by engineer. */
 "Your project was uploaded to the Catrobat community where others can use and download it." = "Your project was uploaded to the Catrobat community where others can use and download it.";
-
-/* No comment provided by engineer. */
-"Your report was successfully sent!" = "Din rapport har skickats!";
 
 /* paint */
 "Zoom" = "Zooma";
