--- a/src/Catty/Resources/Localization/ur.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/ur.lproj/Localizable.strings
@@ -8,10 +8,16 @@
 "Abc" = "اے بی سی";
 
 /* No comment provided by engineer. */
+"About" = " تعارف";
+
+/* No comment provided by engineer. */
 "About Catrobat" = "کیٹروبیٹ کے بارے میں";
 
 /* No comment provided by engineer. */
 "About Pocket Code" = "پاکٹ کوڈ کے بارے میں";
+
+/* No comment provided by engineer. */
+"About Us" = "ہمارا تعارف";
 
 /* No comment provided by engineer. */
 "absolute value" = "مطلق قیمت";
@@ -143,6 +149,9 @@
 "Arduino extension" = "آردوانو توسیع";
 
 /* No comment provided by engineer. */
+"Are you sure you want to delete your account? This cannot be undone!" = "Are you sure you want to delete your account? This cannot be undone!";
+
+/* No comment provided by engineer. */
 "Ask " = "پوچھو ";
 
 /* No comment provided by engineer. */
@@ -261,6 +270,9 @@
 
 /* No comment provided by engineer. */
 "Catrobat community" = "کاٹروبٹ کے تمام لوگ                      ";
+
+/* No comment provided by engineer. */
+"Catrobat website" = " کیٹروبیٹ ویب سائٹ";
 
 /* No comment provided by engineer. */
 "ceiling" = "چھت";
@@ -426,6 +438,9 @@
 
 /* No comment provided by engineer. */
 "Delete" = "خارج کر دیں";
+
+/* No comment provided by engineer. */
+"Delete account" = "اکاؤنٹ ختم کریں";
 
 /* No comment provided by engineer. */
 "Delete actors or objects" = "اداکاروں یا اشیاء کو حذف کریں۔";
@@ -664,9 +679,6 @@
 /* No comment provided by engineer. */
 "End of Loop" = "لوپ کے اختتام";
 
-/* No comment provided by engineer. */
-"Enter a reason" = "وجہ بتائیں";
-
 /* Placeholder for add image-name input field */
 "Enter your image name here..." = "یہاں اپنی تصویر کا نام درج کریں...";
 
@@ -698,9 +710,6 @@
 "Error" = "خرابی";
 
 /* No comment provided by engineer. */
-"Error occurred while reporting the project. Please try again later." = "پروجیکٹ کی اطلاع دیتے وقت خرابی پیش آگئی۔ براہ کرم کچھ دیر بعد کوشش کریں.";
-
-/* No comment provided by engineer. */
 "Error saving file" = "فائل کو بچانے میں خرابی";
 
 /* No comment provided by engineer. */
@@ -708,6 +717,9 @@
 
 /* No comment provided by engineer. */
 "exponent" = "ایکسپوننٹ";
+
+/* No comment provided by engineer. */
+"Extensions" = "توسیعات";
 
 /* No comment provided by engineer. */
 "FA" = "FA";
@@ -845,6 +857,9 @@
 "head top y" = "سر کے اوپر y";
 
 /* No comment provided by engineer. */
+"height of object with ID" = "پہچان کے ساتھ چیز کی اونچائی";
+
+/* No comment provided by engineer. */
 "Hello!" = "ہیلو!";
 
 /* No comment provided by engineer. */
@@ -864,6 +879,9 @@
 
 /* No comment provided by engineer. */
 "hour" = "گھنٹے";
+
+/* No comment provided by engineer. */
+"ID of detected object" = "شناخت شدہ چیز کی ID\n";
 
 /* No comment provided by engineer. */
 "If" = "اگر";
@@ -959,6 +977,9 @@
 "LA" = "LA";
 
 /* No comment provided by engineer. */
+"label of object with ID" = "label of object with ID";
+
+/* No comment provided by engineer. */
 "Last access" = "آخری رسائی:";
 
 /* No comment provided by engineer. */
@@ -980,10 +1001,22 @@
 "Left" = "بائیں طرف";
 
 /* No comment provided by engineer. */
+"left ankle x" = "بائیں ٹخنے ایکس";
+
+/* No comment provided by engineer. */
+"left ankle y" = "بائیں ٹخنے y";
+
+/* No comment provided by engineer. */
 "left ear x" = "بایاں کان x";
 
 /* No comment provided by engineer. */
 "left ear y" = "جلدی چھوڑ دیا";
+
+/* No comment provided by engineer. */
+"left elbow x" = "بائیں کہنی x";
+
+/* No comment provided by engineer. */
+"left elbow y" = "بائیں کہنی y";
 
 /* No comment provided by engineer. */
 "left eye center x" = "بائیں آنکھ کا مرکز x";
@@ -1020,6 +1053,60 @@
 
 /* No comment provided by engineer. */
 "left eyebrow outer y" = "left eyebrow outer y";
+
+/* No comment provided by engineer. */
+"left hip x" = "بائیں ہپ ایکس";
+
+/* No comment provided by engineer. */
+"left hip y" = "بائیں ہپ y";
+
+/* No comment provided by engineer. */
+"left index knuckle x" = "بائیں انڈیکس نوکل ایکس";
+
+/* No comment provided by engineer. */
+"left index knuckle y" = "بائیں انڈیکس knuckle y";
+
+/* No comment provided by engineer. */
+"left knee x" = "بائیں گھٹنے ایکس";
+
+/* No comment provided by engineer. */
+"left knee y" = "بائیں گھٹنے y";
+
+/* No comment provided by engineer. */
+"left middle finger knuckle x" = "بائیں درمیانی انگلی  کا جوڑ x";
+
+/* No comment provided by engineer. */
+"left middle finger knuckle y" = "بائیں درمیانی انگلی  کا جوڑ y";
+
+/* No comment provided by engineer. */
+"left pinky knuckle x" = "بائیں پنکی نوکل ایکس";
+
+/* No comment provided by engineer. */
+"left pinky knuckle y" = "بائیں پنکی نوکل y";
+
+/* No comment provided by engineer. */
+"left ring finger knuckle x" = "انگوٹھی انگشت کا جوڑ x";
+
+/* No comment provided by engineer. */
+"left ring finger knuckle y" = "انگوٹھی انگشت کا جوڑ y";
+
+/* No comment provided by engineer. */
+"left shoulder x" = "بائیں کندھے x";
+
+/* No comment provided by engineer. */
+"left shoulder y" = "بائیں کندھے y";
+
+/* No comment provided by engineer. */
+"left thumb knuckle x" = "بائیں انگوٹھے کی دستک ایکس";
+
+/* No comment provided by engineer. */
+"left thumb knuckle y" = "بائیں انگوٹھے کی دستک y";
+
+/* No comment provided by engineer. */
+"left wrist x" = "بائیں کلائی x";
+
+/* No comment provided by engineer. */
+"left wrist y" = "بائیں کلائی y";
 
 /* No comment provided by engineer. */
 "left-right only" = "بایاں-دایاں صرف";
@@ -1241,6 +1328,12 @@
 "natural logarithm" = "قدرتی لوگارتھم";
 
 /* No comment provided by engineer. */
+"neck x" = "گردن ایکس";
+
+/* No comment provided by engineer. */
+"neck y" = "گردن y";
+
+/* No comment provided by engineer. */
 "New" = "نیا";
 
 /* paint */
@@ -1295,9 +1388,6 @@
 "No search results" = "تلاش کے کوئی نتائج نہیں ہیں";
 
 /* No comment provided by engineer. */
-"No whitespace character allowed" = "کوئی سفید اسپیس کی اجازت نہیں ہے";
-
-/* No comment provided by engineer. */
 "nose x" = "ناک x";
 
 /* No comment provided by engineer. */
@@ -1328,6 +1418,9 @@
 "number of items" = "اشیاء کی تعداد";
 
 /* No comment provided by engineer. */
+"number of text blocks" = "ٹیکسٹ بلاکس کی تعداد";
+
+/* No comment provided by engineer. */
 "Numbers" = "نمبر";
 
 /* No comment provided by engineer. */
@@ -1335,6 +1428,12 @@
 
 /* No comment provided by engineer. */
 "Object or actor name" = "آبجیکٹ یا اداکار کا نام";
+
+/* No comment provided by engineer. */
+"Object recognition" = "چیز کی شناخت";
+
+/* No comment provided by engineer. */
+"object with ID visible" = "ID کے ساتھ آبجیکٹ نظر آتا ہے۔";
 
 /* No comment provided by engineer. */
 "Oct" = "اکتوبر";
@@ -1444,9 +1543,6 @@
 /* No comment provided by engineer. */
 "Please enter at least %lu character(s)." = "براہ کرم کم از کم %lu حروف درج کریں۔";
 
-/* No comment provided by engineer. */
-"Please log in to report this project as inappropriate" = "اس منصوبے کو نامناسب طور پر رپورٹ کرنے کیلئے لاگ ان کریں";
-
 /* paint */
 "Please pick a tool" = "برائے مہربانی ایک آلہ منتخب کریں";
 
@@ -1514,6 +1610,9 @@
 "Previous look" = "پچھلے نظر";
 
 /* No comment provided by engineer. */
+"Privacy" = "نجی معلومات";
+
+/* No comment provided by engineer. */
 "Privacy Settings" = "رازداری کی ترتیبات";
 
 /* No comment provided by engineer. */
@@ -1562,9 +1661,6 @@
 "red" = "سرخ";
 
 /* No comment provided by engineer. */
-"Register" = "رجسٹر کریں";
-
-/* No comment provided by engineer. */
 "Registration successful" = "رجسٹریشن کامیاب!";
 
 /* No comment provided by engineer. */
@@ -1597,9 +1693,6 @@
 /* No comment provided by engineer. */
 "Replace item in list" = "فہرست میں شے بدل دیں";
 
-/* No comment provided by engineer. */
-"Report as inappropriate" = "رپورٹ غیرموزوں ہے";
-
 /* paint */
 "Resize" = "سائز تبدیل کریں";
 
@@ -1613,10 +1706,22 @@
 "Right" = "دائیں طرف";
 
 /* No comment provided by engineer. */
+"right ankle x" = "دائیں ٹخنے ایکس";
+
+/* No comment provided by engineer. */
+"right ankle y" = "دائیں ٹخنے y";
+
+/* No comment provided by engineer. */
 "right ear x" = "دائیں کان x";
 
 /* No comment provided by engineer. */
 "right ear y" = "دایاں کان y";
+
+/* No comment provided by engineer. */
+"right elbow x" = "دائیں کہنی x";
+
+/* No comment provided by engineer. */
+"right elbow y" = "دائیں کہنی y";
 
 /* No comment provided by engineer. */
 "right eye center x" = "دائیں آنکھ کا مرکز ایکس";
@@ -1653,6 +1758,60 @@
 
 /* No comment provided by engineer. */
 "right eyebrow outer y" = "right eyebrow outer y";
+
+/* No comment provided by engineer. */
+"right hip x" = "دائیں کولہے ایکس";
+
+/* No comment provided by engineer. */
+"right hip y" = "دائیں کولہے Y";
+
+/* No comment provided by engineer. */
+"right index knuckle x" = "دائیں انڈیکس نوکل ایکس";
+
+/* No comment provided by engineer. */
+"right index knuckle y" = "دائیں انڈیکس نوکل y";
+
+/* No comment provided by engineer. */
+"right knee x" = "دائیں گھٹنے ایکس";
+
+/* No comment provided by engineer. */
+"right knee y" = "دائیں گھٹنے y";
+
+/* No comment provided by engineer. */
+"right middle finger knuckle x" = "right middle finger knuckle x";
+
+/* No comment provided by engineer. */
+"right middle finger knuckle y" = "right middle finger knuckle y";
+
+/* No comment provided by engineer. */
+"right pinky knuckle x" = "دائیں پنکی نوکل ایکس";
+
+/* No comment provided by engineer. */
+"right pinky knuckle y" = "دائیں پنکی نوکل y";
+
+/* No comment provided by engineer. */
+"right ring finger knuckle x" = "right ring finger knuckle x";
+
+/* No comment provided by engineer. */
+"right ring finger knuckle y" = "right ring finger knuckle y";
+
+/* No comment provided by engineer. */
+"right shoulder x" = "دائیں کندھے x";
+
+/* No comment provided by engineer. */
+"right shoulder y" = "دائیں کندھے y";
+
+/* No comment provided by engineer. */
+"right thumb knuckle x" = "دائیں انگوٹھے کی دستک ایکس";
+
+/* No comment provided by engineer. */
+"right thumb knuckle y" = "دائیں انگوٹھے کی دستک y";
+
+/* No comment provided by engineer. */
+"right wrist x" = "دائیں کلائی x";
+
+/* No comment provided by engineer. */
+"right wrist y" = "دائیں کلائی y";
 
 /* paint */
 "Rotate" = "گھمائیں";
@@ -1811,6 +1970,9 @@
 "Set tempo to" = "ٹیمپو کو پر سیٹ کریں۔";
 
 /* No comment provided by engineer. */
+"Set thread color to" = "دھاگے کا رنگ اس پر سیٹ کریں۔";
+
+/* No comment provided by engineer. */
 "Set transparency " = "شفافیت مقرر کریں";
 
 /* No comment provided by engineer. */
@@ -1904,6 +2066,9 @@
 "Start sound and wait" = "آواز کا آغاز اور انتظار کریں";
 
 /* No comment provided by engineer. */
+"Start triple stitch with length" = "لمبائی کے ساتھ ٹرپل سلائی شروع کریں۔";
+
+/* No comment provided by engineer. */
 "Start zigzag stitch with length" = "لمبائی کے ساتھ آڑھی ترچھی سلائی شروع کریں۔";
 
 /* No comment provided by engineer. */
@@ -1976,7 +2141,28 @@
 "Text" = "متن";
 
 /* No comment provided by engineer. */
+"text block from camera" = "کیمرے سے ٹیکسٹ بلاک";
+
+/* No comment provided by engineer. */
+"text block language from camera" = "کیمرے سے ٹیکسٹ بلاک کی زبان";
+
+/* No comment provided by engineer. */
+"text block size from camera" = "کیمرے سے ٹیکسٹ بلاک سائز";
+
+/* No comment provided by engineer. */
+"text block x from camera" = "کیمرے سے ٹیکسٹ بلاک ایکس";
+
+/* No comment provided by engineer. */
+"text block y from camera" = "کیمرے سے ٹیکسٹ بلاک y";
+
+/* No comment provided by engineer. */
+"text from camera" = "کیمرے سے متن";
+
+/* No comment provided by engineer. */
 "Text message:" = "متن پیغام:";
+
+/* No comment provided by engineer. */
+"Text recognition" = "متن کی شناخت";
 
 /* paint */
 "Text:" = "متن";
@@ -2079,6 +2265,9 @@
 
 /* No comment provided by engineer. */
 "true" = "درست";
+
+/* No comment provided by engineer. */
+"Trusted domains" = "قابل اعتماد حلقے";
 
 /* No comment provided by engineer. */
 "Tu" = "منگل";
@@ -2204,6 +2393,9 @@
 "View" = "دیکھیں";
 
 /* No comment provided by engineer. */
+"View Terms of Use and Service" = "استعمال اور خدمت کی شرائط دیکھیں";
+
+/* No comment provided by engineer. */
 "Views" = "مناظر";
 
 /* No comment provided by engineer. */
@@ -2248,6 +2440,9 @@
 /* No comment provided by engineer. */
 "When you receive" = "جب آپ وصول کریں";
 
+/* No comment provided by engineer. */
+"width of object with ID" = "پہچان کے ساتھ چیز کی چوڑائی";
+
 /* paint */
 "Width selection" = "چوڑائی کا انتخاب";
 
@@ -2258,7 +2453,13 @@
 "Wooden Flute" = "لکڑی کی بانسری";
 
 /* No comment provided by engineer. */
+"X of object with ID" = "X of object with ID";
+
+/* No comment provided by engineer. */
 "x: " = "x: ";
+
+/* No comment provided by engineer. */
+"Y of object with ID" = "Y of object with ID";
 
 /* No comment provided by engineer. */
 "y: " = "y: ";
@@ -2276,6 +2477,9 @@
 "You have already downloaded this project!" = "آپ پہلے ہی اس پروگرام کو ڈاؤن لوڈ کرچکے ہیں!";
 
 /* No comment provided by engineer. */
+"Your account has been successfully deleted." = "Your account has been successfully deleted.";
+
+/* No comment provided by engineer. */
 "Your answer" = "آپ کا جواب";
 
 /* No comment provided by engineer. */
@@ -2283,9 +2487,6 @@
 
 /* No comment provided by engineer. */
 "Your project was uploaded to the Catrobat community where others can use and download it." = "آپ کا پروجیکٹ Catrobat کمیونٹی میں اپ لوڈ کیا گیا تھا جہاں دوسرے اسے استعمال اور ڈاؤن لوڈ کرسکتے ہیں۔";
-
-/* No comment provided by engineer. */
-"Your report was successfully sent!" = "آپکی رپورٹ کامیابی سے بھیج دی گئی!";
 
 /* paint */
 "Zoom" = "زوم";
