--- a/src/Catty/Resources/Localization/zh-Hant.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/zh-Hant.lproj/Localizable.strings
@@ -8,10 +8,16 @@
 "Abc" = "字串";
 
 /* No comment provided by engineer. */
+"About" = "關於";
+
+/* No comment provided by engineer. */
 "About Catrobat" = "關於 Catrobat";
 
 /* No comment provided by engineer. */
 "About Pocket Code" = "關於 Pocket Code";
+
+/* No comment provided by engineer. */
+"About Us" = "About Us";
 
 /* No comment provided by engineer. */
 "absolute value" = "abs";
@@ -143,6 +149,9 @@
 "Arduino extension" = "Arduino 擴展";
 
 /* No comment provided by engineer. */
+"Are you sure you want to delete your account? This cannot be undone!" = "Are you sure you want to delete your account? This cannot be undone!";
+
+/* No comment provided by engineer. */
 "Ask " = "問 ";
 
 /* No comment provided by engineer. */
@@ -261,6 +270,9 @@
 
 /* No comment provided by engineer. */
 "Catrobat community" = "Catrobat社群";
+
+/* No comment provided by engineer. */
+"Catrobat website" = "Catrobat website";
 
 /* No comment provided by engineer. */
 "ceiling" = "天花板";
@@ -426,6 +438,9 @@
 
 /* No comment provided by engineer. */
 "Delete" = "刪除";
+
+/* No comment provided by engineer. */
+"Delete account" = "Delete Account";
 
 /* No comment provided by engineer. */
 "Delete actors or objects" = "刪除角色或對象";
@@ -664,9 +679,6 @@
 /* No comment provided by engineer. */
 "End of Loop" = "循環結束";
 
-/* No comment provided by engineer. */
-"Enter a reason" = "輸入原因";
-
 /* Placeholder for add image-name input field */
 "Enter your image name here..." = "在此處輸入您的圖像名稱...";
 
@@ -698,9 +710,6 @@
 "Error" = "錯誤";
 
 /* No comment provided by engineer. */
-"Error occurred while reporting the project. Please try again later." = "報告項目時出錯。請稍後再試。";
-
-/* No comment provided by engineer. */
 "Error saving file" = "保存文件時出錯";
 
 /* No comment provided by engineer. */
@@ -708,6 +717,9 @@
 
 /* No comment provided by engineer. */
 "exponent" = "exp";
+
+/* No comment provided by engineer. */
+"Extensions" = "Extensions";
 
 /* No comment provided by engineer. */
 "FA" = "FA";
@@ -845,6 +857,9 @@
 "head top y" = "頭頂 y";
 
 /* No comment provided by engineer. */
+"height of object with ID" = "height of object with ID";
+
+/* No comment provided by engineer. */
 "Hello!" = "哈囉!";
 
 /* No comment provided by engineer. */
@@ -864,6 +879,9 @@
 
 /* No comment provided by engineer. */
 "hour" = "小時";
+
+/* No comment provided by engineer. */
+"ID of detected object" = "檢測對象ID";
 
 /* No comment provided by engineer. */
 "If" = "判斷";
@@ -959,6 +977,9 @@
 "LA" = "洛杉磯";
 
 /* No comment provided by engineer. */
+"label of object with ID" = "label of object with ID";
+
+/* No comment provided by engineer. */
 "Last access" = "上次訪問";
 
 /* No comment provided by engineer. */
@@ -980,10 +1001,22 @@
 "Left" = "左";
 
 /* No comment provided by engineer. */
+"left ankle x" = "左腳踝 x";
+
+/* No comment provided by engineer. */
+"left ankle y" = "左腳踝y";
+
+/* No comment provided by engineer. */
 "left ear x" = "左耳 x";
 
 /* No comment provided by engineer. */
 "left ear y" = "早點離開";
+
+/* No comment provided by engineer. */
+"left elbow x" = "左肘 x";
+
+/* No comment provided by engineer. */
+"left elbow y" = "左肘y";
 
 /* No comment provided by engineer. */
 "left eye center x" = "左眼中心 x";
@@ -1020,6 +1053,60 @@
 
 /* No comment provided by engineer. */
 "left eyebrow outer y" = "left eyebrow outer y";
+
+/* No comment provided by engineer. */
+"left hip x" = "左臀部 x";
+
+/* No comment provided by engineer. */
+"left hip y" = "左臀y";
+
+/* No comment provided by engineer. */
+"left index knuckle x" = "左食指關節 x";
+
+/* No comment provided by engineer. */
+"left index knuckle y" = "左食指關節y";
+
+/* No comment provided by engineer. */
+"left knee x" = "左膝 x";
+
+/* No comment provided by engineer. */
+"left knee y" = "左膝 y";
+
+/* No comment provided by engineer. */
+"left middle finger knuckle x" = "left middle finger knuckle x";
+
+/* No comment provided by engineer. */
+"left middle finger knuckle y" = "left middle finger knuckle y";
+
+/* No comment provided by engineer. */
+"left pinky knuckle x" = "左小指關節 x";
+
+/* No comment provided by engineer. */
+"left pinky knuckle y" = "左小指關節y";
+
+/* No comment provided by engineer. */
+"left ring finger knuckle x" = "left ring finger knuckle x";
+
+/* No comment provided by engineer. */
+"left ring finger knuckle y" = "left ring finger knuckle y";
+
+/* No comment provided by engineer. */
+"left shoulder x" = "左肩 x";
+
+/* No comment provided by engineer. */
+"left shoulder y" = "左肩y";
+
+/* No comment provided by engineer. */
+"left thumb knuckle x" = "左手拇指指關節 x";
+
+/* No comment provided by engineer. */
+"left thumb knuckle y" = "左手拇指指關節y";
+
+/* No comment provided by engineer. */
+"left wrist x" = "左手腕 x";
+
+/* No comment provided by engineer. */
+"left wrist y" = "左手腕 y";
 
 /* No comment provided by engineer. */
 "left-right only" = "僅左右";
@@ -1241,6 +1328,12 @@
 "natural logarithm" = "ln";
 
 /* No comment provided by engineer. */
+"neck x" = "脖子 x";
+
+/* No comment provided by engineer. */
+"neck y" = "脖子 y";
+
+/* No comment provided by engineer. */
 "New" = "新增";
 
 /* paint */
@@ -1295,9 +1388,6 @@
 "No search results" = "沒有搜索結果";
 
 /* No comment provided by engineer. */
-"No whitespace character allowed" = "不允許空白字符";
-
-/* No comment provided by engineer. */
 "nose x" = "鼻子 x";
 
 /* No comment provided by engineer. */
@@ -1328,6 +1418,9 @@
 "number of items" = "清單資料數";
 
 /* No comment provided by engineer. */
+"number of text blocks" = "文本塊數";
+
+/* No comment provided by engineer. */
 "Numbers" = "數字";
 
 /* No comment provided by engineer. */
@@ -1335,6 +1428,12 @@
 
 /* No comment provided by engineer. */
 "Object or actor name" = "對像或演員名稱";
+
+/* No comment provided by engineer. */
+"Object recognition" = "物體識別";
+
+/* No comment provided by engineer. */
+"object with ID visible" = "object with ID visible";
 
 /* No comment provided by engineer. */
 "Oct" = "十月";
@@ -1444,9 +1543,6 @@
 /* No comment provided by engineer. */
 "Please enter at least %lu character(s)." = "請至少輸入 %lu 個字符。";
 
-/* No comment provided by engineer. */
-"Please log in to report this project as inappropriate" = "請登錄舉報此項目不當";
-
 /* paint */
 "Please pick a tool" = "請選擇一個工具";
 
@@ -1514,6 +1610,9 @@
 "Previous look" = "以前的樣子";
 
 /* No comment provided by engineer. */
+"Privacy" = "Privacy";
+
+/* No comment provided by engineer. */
 "Privacy Settings" = "隱私設置";
 
 /* No comment provided by engineer. */
@@ -1562,9 +1661,6 @@
 "red" = "紅色的";
 
 /* No comment provided by engineer. */
-"Register" = "登記";
-
-/* No comment provided by engineer. */
 "Registration successful" = "註冊成功";
 
 /* No comment provided by engineer. */
@@ -1597,9 +1693,6 @@
 /* No comment provided by engineer. */
 "Replace item in list" = "更換清單";
 
-/* No comment provided by engineer. */
-"Report as inappropriate" = "不當舉報";
-
 /* paint */
 "Resize" = "調整大小";
 
@@ -1613,10 +1706,22 @@
 "Right" = "右";
 
 /* No comment provided by engineer. */
+"right ankle x" = "右腳踝 x";
+
+/* No comment provided by engineer. */
+"right ankle y" = "右腳踝 y";
+
+/* No comment provided by engineer. */
 "right ear x" = "右耳 x";
 
 /* No comment provided by engineer. */
 "right ear y" = "右耳";
+
+/* No comment provided by engineer. */
+"right elbow x" = "右手肘 x";
+
+/* No comment provided by engineer. */
+"right elbow y" = "右手肘y";
 
 /* No comment provided by engineer. */
 "right eye center x" = "右眼中心 x";
@@ -1653,6 +1758,60 @@
 
 /* No comment provided by engineer. */
 "right eyebrow outer y" = "right eyebrow outer y";
+
+/* No comment provided by engineer. */
+"right hip x" = "右臀部 x";
+
+/* No comment provided by engineer. */
+"right hip y" = "右臀部";
+
+/* No comment provided by engineer. */
+"right index knuckle x" = "右食指關節 x";
+
+/* No comment provided by engineer. */
+"right index knuckle y" = "右食指關節 y";
+
+/* No comment provided by engineer. */
+"right knee x" = "右膝 x";
+
+/* No comment provided by engineer. */
+"right knee y" = "右膝 y";
+
+/* No comment provided by engineer. */
+"right middle finger knuckle x" = "right middle finger knuckle x";
+
+/* No comment provided by engineer. */
+"right middle finger knuckle y" = "right middle finger knuckle y";
+
+/* No comment provided by engineer. */
+"right pinky knuckle x" = "右小指關節 x";
+
+/* No comment provided by engineer. */
+"right pinky knuckle y" = "右小指關節 y";
+
+/* No comment provided by engineer. */
+"right ring finger knuckle x" = "right ring finger knuckle x";
+
+/* No comment provided by engineer. */
+"right ring finger knuckle y" = "right ring finger knuckle y";
+
+/* No comment provided by engineer. */
+"right shoulder x" = "右肩 x";
+
+/* No comment provided by engineer. */
+"right shoulder y" = "右肩y";
+
+/* No comment provided by engineer. */
+"right thumb knuckle x" = "右手拇指指關節 x";
+
+/* No comment provided by engineer. */
+"right thumb knuckle y" = "右手拇指指關節y";
+
+/* No comment provided by engineer. */
+"right wrist x" = "右手腕 x";
+
+/* No comment provided by engineer. */
+"right wrist y" = "右手腕 y";
 
 /* paint */
 "Rotate" = "旋轉";
@@ -1811,6 +1970,9 @@
 "Set tempo to" = "將速度設置為";
 
 /* No comment provided by engineer. */
+"Set thread color to" = "將線色設置為";
+
+/* No comment provided by engineer. */
 "Set transparency " = "設定透明度為 ";
 
 /* No comment provided by engineer. */
@@ -1904,6 +2066,9 @@
 "Start sound and wait" = "啟動聲音並等待";
 
 /* No comment provided by engineer. */
+"Start triple stitch with length" = "從長度開始三針";
+
+/* No comment provided by engineer. */
 "Start zigzag stitch with length" = "以長度開始鋸齒形針跡";
 
 /* No comment provided by engineer. */
@@ -1976,7 +2141,28 @@
 "Text" = "文字";
 
 /* No comment provided by engineer. */
+"text block from camera" = "來自相機的文本塊";
+
+/* No comment provided by engineer. */
+"text block language from camera" = "來自相機的文本塊語言";
+
+/* No comment provided by engineer. */
+"text block size from camera" = "來自相機的文本塊大小";
+
+/* No comment provided by engineer. */
+"text block x from camera" = "來自相機的文本塊 x";
+
+/* No comment provided by engineer. */
+"text block y from camera" = "來自相機的文本塊 y";
+
+/* No comment provided by engineer. */
+"text from camera" = "來自相機的文字";
+
+/* No comment provided by engineer. */
 "Text message:" = "短信：";
+
+/* No comment provided by engineer. */
+"Text recognition" = "文字識別";
 
 /* paint */
 "Text:" = "文本：";
@@ -2079,6 +2265,9 @@
 
 /* No comment provided by engineer. */
 "true" = "真";
+
+/* No comment provided by engineer. */
+"Trusted domains" = "Trusted domains";
 
 /* No comment provided by engineer. */
 "Tu" = "塗";
@@ -2204,6 +2393,9 @@
 "View" = "看法";
 
 /* No comment provided by engineer. */
+"View Terms of Use and Service" = "View Terms of Use and Service";
+
+/* No comment provided by engineer. */
 "Views" = "觀看次數";
 
 /* No comment provided by engineer. */
@@ -2248,6 +2440,9 @@
 /* No comment provided by engineer. */
 "When you receive" = "當接收到";
 
+/* No comment provided by engineer. */
+"width of object with ID" = "width of object with ID";
+
 /* paint */
 "Width selection" = "寬度選擇";
 
@@ -2258,7 +2453,13 @@
 "Wooden Flute" = "木笛";
 
 /* No comment provided by engineer. */
+"X of object with ID" = "X of object with ID";
+
+/* No comment provided by engineer. */
 "x: " = "X： ";
+
+/* No comment provided by engineer. */
+"Y of object with ID" = "Y of object with ID";
 
 /* No comment provided by engineer. */
 "y: " = "y： ";
@@ -2276,6 +2477,9 @@
 "You have already downloaded this project!" = "您已經下載了這個項目！";
 
 /* No comment provided by engineer. */
+"Your account has been successfully deleted." = "Your account has been successfully deleted.";
+
+/* No comment provided by engineer. */
 "Your answer" = "您的答案";
 
 /* No comment provided by engineer. */
@@ -2283,9 +2487,6 @@
 
 /* No comment provided by engineer. */
 "Your project was uploaded to the Catrobat community where others can use and download it." = "您的項目已上傳到 Catrobat 社區，其他人可以在該社區使用和下載它。";
-
-/* No comment provided by engineer. */
-"Your report was successfully sent!" = "您的報告已成功發送！";
 
 /* paint */
 "Zoom" = "飛漲";
